# CGBasicsAssignment

./: .gitmodules  CMakeLists.txt  README.md
source/: main.cpp
